--- a/css/AG4.css
+++ b/css/AG4.css
@@ -3,7 +3,7 @@ body {
 }
 
 .items-cnt {
-    background: rgb(233, 233, 233);
+    background: white;
     padding: 15px;
     border-radius: 8px;
     border: 1px solid rgb(173, 173, 173);
@@ -12,6 +12,14 @@ body {
 
 .items-cnt div {
     margin-bottom: 10px;
+}
+
+.items-cnt .img-ct {
+    position: relative;
+}
+
+.items-cnt .img-ct .col-2 {
+    z-index: 100;
 }
 
 .items-cnt .img-ct img {
@@ -147,11 +155,18 @@ body {
 .btn-menu {
     display: none !important;
     border: none;
-    border-bottom: 1px solid rgb(0, 0, 0);
-    background: none;
+    border-bottom: 1px solid rgb(110, 110, 110);
+    background: #d2d2d2;
     padding: 1.5%;
     display: flex;
     justify-content: flex-start;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+.modal {
+    z-index: 10000;
 }
 
 @media(max-width: 1200px) {
@@ -171,7 +186,14 @@ body {
         width: 15%;
     }
     .items .col-3 {
-        width: 45%;
+        width: 30%;
+    }
+    .items .m-3 {
+        margin: 8px !important;
+    }
+    .items-cnt h6 {
+        line-height: 1.0;
+        font-size: 15px;
     }
     #prod-cl a,
     #prod-br a {
@@ -188,12 +210,12 @@ body {
 
 @media(max-width: 766px) {
     .items .col-3 {
-        width: 59%;
+        width: 40%;
     }
 }
 
-@media(max-width: 400px) {
+@media(max-width: 490px) {
     .items .col-3 {
-        width: 69%;
+        width: 70%;
     }
 }
