--- a/Angular/T2204M/src/app/practiceclass/weather.html
+++ b/Angular/T2204M/src/app/practiceclass/weather.html
@@ -1,18 +1,26 @@
-<h1>Thong tin thoi tiet</h1>
+<!-- <h1>Thong tin thoi tiet</h1>
 <div>
     <input #city placeholder="City name">
     <button type="button" (click)="onSubmit(city.value)">changeTest1</button>
-</div>
+</div> -->
 <!-- hoac dung -->
-<div>
+<!-- <div>
     <input type="text" placeholder="city name" [(ngModel)]="city2">
     <button type="button" (click)="changecity()">changeTest2</button>
-</div>
+</div> -->
 
 <!-- <button type="submit" (submit)="timkiem()">search</button> -->
-<div *ngIf="data">
+<!-- <div *ngIf="data">
     <h1>Khu Vực:{{data.name}} - {{data.sys.country}}</h1>
     <p>Nhiệt Độ: {{data.main.temp}}</p>
     <p>Mây:{{data.clouds.all}}</p>
-    <p>{{data.weather[0].description}}</p>
-</div>
+</div> -->
+
+
+<!-- <ul>
+    <li *ngFor="let i of data;let j=index">
+        <p>sadadsa</p>
+        <p class="nd"><span class="temp">27asdsa</span><img class="icon" src="http://openweathermap.org/img/wn/10d@2x.png" alt=""></p>
+        <p class="description text">mưa nhẹ</p>
+    </li>
+</ul> -->
