--- a/Angular/T2204M/src/app/childNewWt/childwt.css
+++ b/Angular/T2204M/src/app/childNewWt/childwt.css
@@ -1,3 +1,14 @@
 .text {
-    font-weight: 700 !important;
+    font-weight: 600 !important;
+    font-size: 18px;
+}
+
+.temp {
+    font-size: 40px !important;
+    font-weight: 600 !important;
+}
+
+.nd {
+    display: flex;
+    align-items: center
 }
