--- a/Angular/T2204M/src/app/childNewWt/childprwt.html
+++ b/Angular/T2204M/src/app/childNewWt/childprwt.html
@@ -3,4 +3,4 @@
 <div class="row t-ct"><span class="col-7 temp">{{data.main.temp}}<sup>o</sup>C</span>
     <img class="col" src="http://openweathermap.org/img/wn/{{data.weather[0].icon}}@2x.png" alt="">
 </div>
-<div class="description text">{{data.weather[0].description}}</div>
+<div class="description">{{data.weather[0].description}}</div>
