--- a/Angular/T2204M/src/app/childNewWt/childwt.css
+++ b/Angular/T2204M/src/app/childNewWt/childwt.css
@@ -16,3 +16,10 @@
 .t-ct {
     align-items: center !important;
 }
+
+.description {
+    font-style: italic;
+    font-size: 20px;
+    text-transform: capitalize;
+    opacity: 0.9;
+}
