--- a/Angular/T2204M/src/app/newWeather/fcwt.css
+++ b/Angular/T2204M/src/app/newWeather/fcwt.css
@@ -16,6 +16,7 @@
 }
 
 .inp-city {
+    position: relative;
     padding: 8px;
     text-align: center;
     font-size: 35px;
@@ -24,15 +25,25 @@
     border-bottom: 1px solid;
     outline: none;
     color: white;
-    margin-top: 25px;
+    margin: 25px 0;
 }
 
 .btn-search {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.1);
     padding: 6px;
     border: 3px solid white;
     border-radius: 15px;
     font-size: 25px;
     color: white;
     margin: 25px 0;
+}
+
+.btn-search:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.location {
+    color: white;
+    font-size: 50px;
+    padding: 5px;
 }
