--- a/Angular/T2204M/src/app/app.component.css
+++ b/Angular/T2204M/src/app/app.component.css
@@ -1,5 +1,9 @@
 body {
-    background-image: url(./newWeather/img/image.jpg) !important;
+    background-image: url(../app/bgWeather.jpg) !important;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.menu {
+    font-size: 25px;
 }
