--- a/Angular/T2204M/src/app/newWeather/fcwt.css
+++ b/Angular/T2204M/src/app/newWeather/fcwt.css
@@ -53,3 +53,9 @@
     top: 0;
     width: 100%
 }
+
+.wt {
+    background-image: url(./img/image.jpg) !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
