--- a/Angular/T2204M/src/app/practiceclass/weather.html
+++ b/Angular/T2204M/src/app/practiceclass/weather.html
@@ -4,23 +4,23 @@
     <button type="button" (click)="onSubmit(city.value)">changeTest1</button>
 </div> -->
 <!-- hoac dung -->
-<!-- <div>
+<div>
     <input type="text" placeholder="city name" [(ngModel)]="city2">
     <button type="button" (click)="changecity()">changeTest2</button>
-</div> -->
+</div>
 
 <!-- <button type="submit" (submit)="timkiem()">search</button> -->
-<!-- <div *ngIf="data">
+<div *ngIf="data">
     <h1>Khu Vực:{{data.name}} - {{data.sys.country}}</h1>
     <p>Nhiệt Độ: {{data.main.temp}}</p>
     <p>Mây:{{data.clouds.all}}</p>
-</div> -->
+</div>
 
 
-<!-- <ul>
-    <li *ngFor="let i of data;let j=index">
+<ul>
+    <li>
         <p>sadadsa</p>
         <p class="nd"><span class="temp">27asdsa</span><img class="icon" src="http://openweathermap.org/img/wn/10d@2x.png" alt=""></p>
         <p class="description text">mưa nhẹ</p>
     </li>
-</ul> -->
+</ul>
