--- a/Angular/T2204M/src/app/AGL/cnt2.html
+++ b/Angular/T2204M/src/app/AGL/cnt2.html
@@ -1,5 +1,23 @@
-<div>
-    <img src="{{cnagl2.image}}" alt="">
-    <h2>{{cnagl2.name}}</h2>
-    <p>{{cnagl2.price}}</p>
+<div class="col-3 items-cnt m-3 " *ngFor="let i of cnt2">
+    <div class="img-ct row">
+        <div class="col-2 "><span class="if-text">New</span></div><img class="col-8" src="{{i.image}}" alt="">
+        <div class="col-2 contact">
+            <!-- <ion-icon name="heart-outline"></ion-icon>
+          <ion-icon name="shuffle-outline"></ion-icon> -->
+        </div>
+    </div>
+    <div style="height: 38px;">
+        <h6 class="name">{{i.name}}</h6>
+    </div>
+    <div class="price">
+        <div><span class="price-cr">${{((i.price/23405)*100/70).toFixed(2)}}</span><span class="price-old">${{(i.price/23405).toFixed(2)}}</span></div>
+        <div>
+            <!-- <ion-icon name="star-outline"></ion-icon>
+          <ion-icon name="star-outline"></ion-icon>
+          <ion-icon name="star-outline"></ion-icon>
+          <ion-icon name="star-outline"></ion-icon>
+          <ion-icon name="star-outline"></ion-icon> -->
+        </div>
+    </div>
+    <div><button class="add-items" type="submit">Add</button></div>
 </div>
