--- a/Angular/T2204M/src/assets/app.css
+++ b/Angular/T2204M/src/assets/app.css
@@ -1,64 +1,170 @@
 body {
-    min-height: 100vh;
-    min-height: -webkit-fill-available;
+    background: #d2d2d2;
 }
 
-html {
-    height: -webkit-fill-available;
+.items-cnt {
+    background: white;
+    padding: 15px;
+    border-radius: 8px;
+    border: 1px solid rgb(173, 173, 173);
+    box-shadow: 2px 2px 5px rgb(183, 183, 183);
 }
 
-main {
-    height: 100vh;
-    height: -webkit-fill-available;
-    max-height: 100vh;
-    overflow-x: auto;
-    overflow-y: hidden;
+.items-cnt div {
+    margin-bottom: 10px;
 }
 
-.dropdown-toggle {
-    outline: 0;
+.items-cnt .img-ct {
+    position: relative;
 }
 
-.btn-toggle {
-    padding: .25rem .5rem;
+.items-cnt .img-ct .col-2 {
+    z-index: 100;
+}
+
+.items-cnt .img-ct img {
+    margin-top: 11%;
+    border-radius: 8px;
+}
+
+.items-cnt .img-ct img:hover {
+    transform: scale(1.1);
+}
+
+.price {
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+}
+
+.price ion-icon {
+    font-size: 13px;
+    color: rgb(255, 145, 0);
+}
+
+.price ion-icon:hover {
+    transform: scale(1.5);
+}
+
+.price ion-icon:nth-last-child(1) {
+    color: black;
+}
+
+.price-cr {
+    color: rgb(225, 59, 53);
+    font-weight: 550;
+}
+
+.price-old {
+    opacity: 0.7;
+    text-decoration: line-through;
+}
+
+.add-items {
+    position: relative;
+    width: 100%;
+    background: #dcdbdb;
+    border: none;
+    padding: 5px;
+    border-radius: 10px;
+    color: rgb(86, 86, 86);
+}
+
+.add-items::after {
+    position: absolute;
+    content: "+";
+    font-size: 16px;
+    right: 10px;
+}
+
+.if-text {
+    padding: 5px;
+    background: #008000;
+    color: white;
     font-weight: 600;
-    color: rgba(0, 0, 0, .65);
-    background-color: transparent;
+    font-size: 14px;
+    border-radius: 5px;
 }
 
-.btn-toggle:hover,
-.btn-toggle:focus {
-    color: rgba(0, 0, 0, .85);
-    background-color: #d2f4ea;
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 22px;
 }
 
-.btn-toggle::before {
-    width: 1.25em;
-    line-height: 0;
-    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-    transition: transform .35s ease;
-    transform-origin: .5em 50%;
+.contact ion-icon {
+    margin-bottom: 8px;
 }
 
-.btn-toggle[aria-expanded="true"] {
-    color: rgba(0, 0, 0, .85);
+.contact ion-icon:hover {
+    transform: scale(1.3);
 }
 
-.btn-toggle[aria-expanded="true"]::before {
-    transform: rotate(90deg);
+.price-cr {
+    margin-right: 10px;
 }
 
-.btn-toggle-nav a {
-    padding: .1875rem .5rem;
-    margin-top: .125rem;
-    margin-left: 1.25rem;
+.col-3 {
+    flex: 0 0 auto;
+    width: 29%;
 }
 
-.btn-toggle-nav a:hover,
-.btn-toggle-nav a:focus {
-    background-color: #d2f4ea;
+.col-us {
+    flex: 0 0 auto;
+    width: 25%;
 }
 
-.scrollarea {
-    overflow-y: auto;
+#prod-cl a,
+#prod-br a,
+#p-cl a,
+#p-br a {
+    color: black;
+    text-decoration: none;
+    font-size: 21px;
+    letter-spacing: 1px;
+    line-height: 58px;
+    position: relative;
+}
+
+#prod-cl a::after,
+#prod-br a::after,
+#p-cl a::after,
+#p-br a::after {
+    content: '';
+    position: absolute;
+    background: black;
+    height: 1px;
+    width: 0%;
+    bottom: 0;
+    left: 0;
+    transition: all 0.6s;
+}
+
+#prod-cl a:hover::after,
+#prod-br a:hover::after,
+#p-cl a:hover::after,
+#p-br a:hover::after {
+    width: 100%;
+}
+
+#prod-cl a span {
+    margin-left: 5px;
+}
+
+.btn-menu {
+    display: none !important;
+    border: none;
+    border-bottom: 1px solid rgb(110, 110, 110);
+    background: #d2d2d2;
+    padding: 1.5%;
+    display: flex;
+    justify-content: flex-start;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+.modal {
+    z-index: 10000;
 }
