--- a/Angular/T2204M/src/app/AGL/cnt1.html
+++ b/Angular/T2204M/src/app/AGL/cnt1.html
@@ -1,4 +1,4 @@
-<div class="col-3 items-cnt m-3 " *ngFor="let i of agl">
+<div class="col-agl items-cnt m-3 " *ngFor="let i of agl">
     <div class="img-ct row">
         <div class="col-2 "><span class="if-text">New</span></div><img class="col-8" src="{{i.image}}" alt="">
         <div class="col-2 contact">
